--- a/source/Funbit.Ets.Telemetry.Server/Funbit.Ets.Telemetry.Server.csproj
+++ b/source/Funbit.Ets.Telemetry.Server/Funbit.Ets.Telemetry.Server.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Funbit.Ets.Telemetry.Server</RootNamespace>
     <AssemblyName>Ets2Telemetry</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
@@ -100,8 +100,12 @@
       <HintPath>..\packages\Owin.WebSocket.1.3.1\lib\net45\Owin.WebSocket.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.CodeDom, Version=9.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.CodeDom.9.0.0\lib\net462\System.CodeDom.dll</HintPath>
+    </Reference>
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -127,10 +131,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\ArduinoTelemetryController.cs" />
     <Compile Include="Controllers\Ets2AppController.cs" />
     <Compile Include="Controllers\Ets2TelemetryHub.cs" />
     <Compile Include="Controllers\StaticFileController.cs" />
     <Compile Include="Controllers\Ets2TelemetryController.cs" />
+    <Compile Include="Data\ISerialPortManager.cs" />
+    <Compile Include="Data\LogMessage.cs" />
+    <Compile Include="Data\SerialPortChangedEventArgs.cs" />
+    <Compile Include="Data\SerialPortManager.cs" />
+    <Compile Include="Helpers\ArduinoHleper.cs" />
     <Compile Include="Helpers\AssemblyHelper.cs" />
     <Compile Include="Helpers\Ets2ProcessHelper.cs" />
     <Compile Include="Data\IEts2TelemetryData.cs" />
@@ -141,6 +151,7 @@
     <Compile Include="Helpers\ExceptionExtensions.cs" />
     <Compile Include="Helpers\JsonHelper.cs" />
     <Compile Include="Helpers\KeyboardHelper.cs" />
+    <Compile Include="Helpers\MessageNotifier.cs" />
     <Compile Include="Helpers\ProcessHelper.cs" />
     <Compile Include="Helpers\Settings.cs" />
     <Compile Include="Helpers\Win32Uac.cs" />
