--- a/source/Funbit.Ets.Telemetry.Server/packages.config
+++ b/source/Funbit.Ets.Telemetry.Server/packages.config
@@ -19,4 +19,6 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Owin.WebSocket" version="1.3.1" targetFramework="net45" />
+  <package id="System.CodeDom" version="9.0.0" targetFramework="net48" />
+  <package id="System.Management" version="9.0.0" targetFramework="net48" />
 </packages>
