refactor: refresh usb ports

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /_WorkingFiles
 source/.vs/Funbit.Ets.Telemetry/v14/*
 /source/.vs/Funbit.Ets.Telemetry
+/source/Funbit.Ets.Telemetry.Server.Setup
